trying to fix user details container widths and spacing

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,8 +1,8 @@
 .user-details {
-  padding: 5px;
+  padding: 7px;
   background-color: #fff;
   margin-bottom: 50px;
-  width: calc((450px * 2) + 2em);
+  width: calc((450px * 2) + 2em + 50px);
 }
 
 .user-details > p {
